# soupawhisper

./: .gitignore  CLAUDE.md  README.md  config.example.ini  dictate.py  install.sh
.references_only/: README.md  config.example.ini  debug_keys.py  dictate.py  install.sh  pyproject.toml
soupawhisper/: __init__.py  __main__.py  audio.py  clipboard.py  config.py  history.py  hotkeys.py  notify.py  transcribe.py  tray.py
